--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,13 +75,13 @@ button {
   }
 }
 .visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  overflow: hidden;
   clip: rect(0, 0, 0, 0);
   clip-path: inset(50%);
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
 }
 
 /* Copy & Lists */
@@ -92,21 +92,21 @@ p,
 
 ul,
 ol {
-  margin-bottom: 1.6rem;
   margin-top: 1.6rem;
+  margin-bottom: 1.6rem;
 }
 
 ul ul,
 ol ul,
 ul ol,
 ol ol {
-  margin-bottom: 0;
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 blockquote {
-  margin-bottom: 1.6rem;
   margin-top: 1.6rem;
+  margin-bottom: 1.6rem;
 }
 
 /* Headings */
@@ -127,16 +127,16 @@ h6,
 
 h1,
 .h1 {
+  margin-top: 3rem;
   font-size: 3rem;
   line-height: 1.2;
-  margin-top: 3rem;
 }
 
 h2,
 .h2 {
+  margin-top: 2.8rem;
   font-size: 2.8rem;
   line-height: 1.3;
-  margin-top: 2.8rem;
 }
 
 h3,
@@ -157,6 +157,112 @@ h5,
 h6,
 .h6 {
   font-size: 1.6rem;
+}
+
+.thumbnail {
+  max-height: 100px;
+  object-fit: cover;
+}
+
+/* 
+Generic Styling, for Desktops/Laptops 
+*/
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+/* Zebra striping */
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+
+th {
+  background: #bcb2e6;
+  color: fff;
+  font-weight: bold;
+}
+
+td,
+th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+/* 
+Max width before this PARTICULAR table gets nasty
+This query will take effect for any screen smaller than 760px
+and also iPads specifically.
+*/
+@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
+  /* Force table to not be like tables anymore */
+  .table-responsive {
+    /* Hide table headers (but not display: none;, for accessibility) */
+  }
+  .table-responsive thead,
+.table-responsive tbody,
+.table-responsive th,
+.table-responsive td,
+.table-responsive tr {
+    display: block;
+  }
+  .table-responsive tr {
+    border: 1px solid #ccc;
+  }
+  .table-responsive thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .table-responsive td {
+    position: relative;
+    padding-left: 50%;
+    /* Behave  like a "row" */
+    border: 0;
+    border-bottom: 1px solid #eee;
+  }
+  .table-responsive td::before {
+    /* Now like a table header */
+    position: absolute;
+    /* Top/left values mimic padding */
+    top: 6px;
+    left: 6px;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+  }
+
+  /*
+  Label the data
+  */
+  #photographes-table td:nth-of-type(1)::before {
+    content: "Name";
+  }
+  #photographes-table td:nth-of-type(2)::before {
+    content: "id";
+  }
+  #photographes-table td:nth-of-type(3)::before {
+    content: "City";
+  }
+  #photographes-table td:nth-of-type(4)::before {
+    content: "Country";
+  }
+  #photographes-table td:nth-of-type(5)::before {
+    content: "Tags";
+  }
+  #photographes-table td:nth-of-type(6)::before {
+    content: "Tagline";
+  }
+  #photographes-table td:nth-of-type(7)::before {
+    content: "Price";
+  }
+  #photographes-table td:nth-of-type(8)::before {
+    content: "Portrait";
+  }
+  #photographes-table td:nth-of-type(9)::before {
+    content: "Medias";
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
