--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/* vendors */
+/* Base */
 /* Box sizing rules */
 *,
 *::before,
@@ -74,6 +76,7 @@ button {
     transition-duration: 0.01ms !important;
   }
 }
+/* Accessibility */
 .visually-hidden:not(:focus):not(:active) {
   position: absolute;
   width: 1px;
@@ -159,20 +162,28 @@ h6,
   font-size: 1.6rem;
 }
 
+/* Components */
+/* Links */
+/* Buttons */
+/* Images */
 .thumbnail {
   max-height: 100px;
   object-fit: cover;
 }
 
-/* 
-Generic Styling, for Desktops/Laptops 
-*/
+.thumb-preview {
+  display: inline-block;
+  max-width: 100px;
+  max-height: 100px;
+  object-fit: cover;
+}
+
+/* Tables */
 table {
   width: 100%;
   border-collapse: collapse;
 }
 
-/* Zebra striping */
 tr:nth-of-type(odd) {
   background: #eee;
 }
@@ -190,79 +201,8 @@ th {
   text-align: left;
 }
 
-/* 
-Max width before this PARTICULAR table gets nasty
-This query will take effect for any screen smaller than 760px
-and also iPads specifically.
-*/
-@media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
-  /* Force table to not be like tables anymore */
-  .table-responsive {
-    /* Hide table headers (but not display: none;, for accessibility) */
-  }
-  .table-responsive thead,
-.table-responsive tbody,
-.table-responsive th,
-.table-responsive td,
-.table-responsive tr {
-    display: block;
-  }
-  .table-responsive tr {
-    border: 1px solid #ccc;
-  }
-  .table-responsive thead tr {
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-  .table-responsive td {
-    position: relative;
-    padding-left: 50%;
-    /* Behave  like a "row" */
-    border: 0;
-    border-bottom: 1px solid #eee;
-  }
-  .table-responsive td::before {
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 45%;
-    padding-right: 10px;
-    white-space: nowrap;
-  }
-
-  /*
-  Label the data
-  */
-  #photographes-table td:nth-of-type(1)::before {
-    content: "Name";
-  }
-  #photographes-table td:nth-of-type(2)::before {
-    content: "id";
-  }
-  #photographes-table td:nth-of-type(3)::before {
-    content: "City";
-  }
-  #photographes-table td:nth-of-type(4)::before {
-    content: "Country";
-  }
-  #photographes-table td:nth-of-type(5)::before {
-    content: "Tags";
-  }
-  #photographes-table td:nth-of-type(6)::before {
-    content: "Tagline";
-  }
-  #photographes-table td:nth-of-type(7)::before {
-    content: "Price";
-  }
-  #photographes-table td:nth-of-type(8)::before {
-    content: "Portrait";
-  }
-  #photographes-table td:nth-of-type(9)::before {
-    content: "Medias";
-  }
-}
+/* Layouts */
+/* Pages */
+/* Themes */
 
 /*# sourceMappingURL=style.css.map */
