--- a/src/sass/components/_images.scss
+++ b/src/sass/components/_images.scss
@@ -1,4 +1,12 @@
+/* Images */
 .thumbnail {
+  max-height: 100px;
+  object-fit: cover;
+}
+
+.thumb-preview {
+  display: inline-block;
+  max-width: 100px;
   max-height: 100px;
   object-fit: cover;
 }
