--- a/src/assets/sass/base/_reset.scss
+++ b/src/assets/sass/base/_reset.scss
@@ -5,10 +5,6 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 62.5%;
-}
-
 /* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
@@ -29,9 +25,15 @@ p {
 /* Set core body defaults */
 body {
   font-family: $font-family-sans;
-  font-size: 1.6rem;
+  font-size: 1rem;
   line-height: 1.5;
   min-height: 100vh;
+}
+
+ul:not([role="list"]) {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /* Make images easier to work with */
@@ -55,7 +57,7 @@ select {
   font: inherit;
 }
 
-button {
+button:hover {
   cursor: pointer;
 }
 
