--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 /* vendors */
 /* Base */
 /* Box sizing rules */
@@ -5,10 +6,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
 }
 
 /* Set core root defaults */
@@ -30,10 +27,16 @@ p {
 
 /* Set core body defaults */
 body {
-  font-family: arial, helvetica, sans-serif;
-  font-size: 1.6rem;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1rem;
   line-height: 1.5;
   min-height: 100vh;
+}
+
+ul:not([role=list]) {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /* Make images easier to work with */
@@ -57,7 +60,7 @@ select {
   font: inherit;
 }
 
-button {
+button:hover {
   cursor: pointer;
 }
 
@@ -87,83 +90,23 @@ button {
   clip-path: inset(50%);
 }
 
-/* Copy & Lists */
-p,
-.p {
-  margin-top: 1.6rem;
-}
-
-ul,
-ol {
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
-}
-
-ul ul,
-ol ul,
-ul ol,
-ol ol {
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-blockquote {
-  margin-top: 1.6rem;
-  margin-bottom: 1.6rem;
-}
-
-/* Headings */
-h1,
-.h1,
-h2,
-.h2,
-h3,
-.h3,
-h4,
-.h4,
-h5,
-.h5,
-h6,
-.h6 {
-  margin-top: 1.6rem;
-}
-
-h1,
-.h1 {
-  margin-top: 3rem;
-  font-size: 3rem;
-  line-height: 1.2;
-}
-
-h2,
-.h2 {
-  margin-top: 2.8rem;
-  font-size: 2.8rem;
-  line-height: 1.3;
-}
-
-h3,
-.h3 {
-  font-size: 2.5rem;
-}
-
-h4,
-.h4 {
-  font-size: 2rem;
-}
-
-h5,
-.h5 {
-  font-size: 1.8rem;
-}
-
-h6,
-.h6 {
-  font-size: 1.6rem;
-}
-
+/* Typography */
 /* Components */
 /* Links */
+.skip-link {
+  position: absolute;
+  left: 50%;
+  height: 30px;
+  padding: 8px;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
+  background: #e77e23;
+}
+
+.skip-link:focus {
+  transform: translateY(0%);
+}
+
 /* Buttons */
 /* Images */
 .thumbnail {
@@ -201,7 +144,81 @@ th {
   text-align: left;
 }
 
+.card {
+  text-align: center;
+}
+
+.card__img {
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  border-radius: 200px;
+  object-fit: cover;
+}
+
+.tag-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.tag {
+  margin: 0;
+  padding: 0;
+}
+
+.btn-tag {
+  display: block;
+  padding: 0 8px;
+  border: 1px solid #c4c4c4;
+  border-radius: 21px;
+  background-color: transparent;
+  color: #901c1c;
+  font-size: 0.75rem;
+}
+
 /* Layouts */
+.banner {
+  width: 150px;
+  height: 37.5px;
+  margin: 40px auto auto 20px;
+}
+
+.top-nav {
+  margin: 30px 0 0;
+  padding: 0 40px;
+}
+
+.site-main {
+  padding-top: 46px;
+}
+
+.page-title {
+  position: absolute;
+  top: 50px;
+  right: 22px;
+  color: #901c1c;
+  font-size: 0.875rem;
+}
+
+.section-photographers {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  column-gap: 247px;
+  row-gap: 30px;
+}
+
+.card {
+  flex-grow: 1;
+  flex-shrink: 0;
+  min-width: 263px;
+}
+
 /* Pages */
 /* Themes */
 
