--- a/src/assets/sass/base/_typography.scss
+++ b/src/assets/sass/base/_typography.scss
@@ -1,1 +1,29 @@
 /* Typography */
+.page-title {
+  color: $color-primary;
+  font-size: 0.875rem;
+}
+
+.name {
+  color: $color-primary;
+  font-size: 2.25rem;
+  font-weight: normal;
+}
+
+.location {
+  color: $color-primary;
+  font-size: 0.8125rem;
+  font-weight: normal;
+}
+
+.tagline {
+  color: #000;
+  font-size: 0.625rem;
+  font-weight: normal;
+}
+
+.pricing {
+  color: $color-400;
+  font-size: 0.5625rem;
+  font-weight: normal;
+}
