--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -5,11 +5,11 @@ $font-family-sans: "DM Sans", sans-serif;
 $color-primary: #901c1c;
 $color-secondary: #db8876;
 
-$color-white: #fff;
+$white: #fff;
 $color-100: #fafafa;
 $color-200: #e5e5e5;
 $color-300: #c4c4c4;
 $color-350: #737373;
 $color-400: #757575;
 $color-500: #525252;
-$color-black: #000;
+$black: #000;
