--- a/src/assets/sass/base/_reset.scss
+++ b/src/assets/sass/base/_reset.scss
@@ -19,13 +19,14 @@ h4,
 h5,
 h6,
 p {
+  font-weight: normal;
   margin: 0;
 }
 
 /* Set core body defaults */
 body {
   font-family: $font-family-sans;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5;
   min-height: 100vh;
 }
