--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,1 +1,15 @@
 /* Buttons */
+.btn {
+  padding: 23px 18px;
+  border-radius: 5px;
+  background-color: $color-primary;
+  color: $white;
+  font-size: 1.125rem;
+  font-weight: bold;
+
+  &:hover,
+  &:focus {
+    background-color: $color-secondary;
+    color: $black;
+  }
+}
