--- a/src/assets/sass/components/_links.scss
+++ b/src/assets/sass/components/_links.scss
@@ -2,13 +2,29 @@
 .skip-link {
   position: absolute;
   left: 50%;
-  height: 30px;
-  padding: 8px;
-  transform: translateY(-100%);
+  transform: translate(-50%, -100%);
   transition: transform 0.3s;
-  background: #e77e23;
+  line-height: 30px;
 }
 
 .skip-link:focus {
-  transform: translateY(0%);
+  transform: translate(-50%, 0);
+}
+
+a {
+  display: inline-block;
+  padding: 3px 6px;
+  border: 1px solid $color-300;
+  border-radius: 21px;
+  background-color: transparent;
+  color: $color-primary;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    background-color: $color-primary;
+    color: $white;
+  }
 }
