--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -1,4 +1,5 @@
 .card {
+  animation: card-init 300ms ease-in-out forwards;
   text-align: center;
 }
 
@@ -8,4 +9,13 @@
   margin: auto;
   border-radius: 200px;
   object-fit: cover;
+}
+
+@keyframes card-init {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
