--- a/src/assets/sass/components/_tags.scss
+++ b/src/assets/sass/components/_tags.scss
@@ -7,7 +7,21 @@
   gap: 5px;
 }
 
+.tag-link,
 .tag {
-  margin: 0;
-  padding: 0;
+  display: inline-block;
+  padding: 3px 6px;
+  border: 1px solid $color-300;
+  border-radius: 21px;
+  background-color: transparent;
+  color: $color-primary;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  text-decoration: none;
+}
+
+.tag-link:hover,
+.tag-link:focus {
+  background-color: $color-primary;
+  color: $white;
 }
