--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,13 +22,14 @@ h4,
 h5,
 h6,
 p {
+  font-weight: normal;
   margin: 0;
 }
 
 /* Set core body defaults */
 body {
   font-family: "DM Sans", sans-serif;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.5;
   min-height: 100vh;
 }
@@ -91,23 +92,63 @@ button:hover {
 }
 
 /* Typography */
+.page-title {
+  color: #901c1c;
+  font-size: 0.875rem;
+}
+
+.name {
+  color: #901c1c;
+  font-size: 2.25rem;
+  font-weight: normal;
+}
+
+.location {
+  color: #901c1c;
+  font-size: 0.8125rem;
+  font-weight: normal;
+}
+
+.tagline {
+  color: #000;
+  font-size: 0.625rem;
+  font-weight: normal;
+}
+
+.pricing {
+  color: #757575;
+  font-size: 0.5625rem;
+  font-weight: normal;
+}
+
 /* Components */
 /* Links */
 .skip-link {
   position: absolute;
   left: 50%;
-  height: 30px;
-  padding: 8px;
-  transform: translateY(-100%);
+  transform: translate(-50%, -100%);
   transition: transform 0.3s;
-  background: #e77e23;
+  line-height: 30px;
 }
 
 .skip-link:focus {
-  transform: translateY(0%);
+  transform: translate(-50%, 0);
 }
 
 /* Buttons */
+.btn {
+  padding: 23px 18px;
+  border-radius: 5px;
+  background-color: #901c1c;
+  color: #fff;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+.btn:hover, .btn:focus {
+  background-color: #db8876;
+  color: #000;
+}
+
 /* Images */
 .thumbnail {
   max-height: 100px;
@@ -145,6 +186,7 @@ th {
 }
 
 .card {
+  animation: card-init 300ms ease-in-out forwards;
   text-align: center;
 }
 
@@ -156,6 +198,14 @@ th {
   object-fit: cover;
 }
 
+@keyframes card-init {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .tag-list {
   display: flex;
   flex-direction: row;
@@ -165,30 +215,60 @@ th {
   gap: 5px;
 }
 
+.tag-link,
 .tag {
-  margin: 0;
-  padding: 0;
-}
-
-.btn-tag {
-  display: block;
-  padding: 0 8px;
+  display: inline-block;
+  padding: 3px 6px;
   border: 1px solid #c4c4c4;
   border-radius: 21px;
   background-color: transparent;
   color: #901c1c;
   font-size: 0.75rem;
+  line-height: 1rem;
+  text-decoration: none;
+}
+
+.tag-link:hover,
+.tag-link:focus {
+  background-color: #901c1c;
+  color: #fff;
+}
+
+.show {
+  transform: scale(1);
+  transition: opacity 200ms, transform 200ms;
+  opacity: 1;
+}
+
+.hide {
+  transform: scale(0);
+  transition: opacity 200ms, transform 200ms;
+  opacity: 0;
 }
 
 /* Layouts */
+.container {
+  max-width: 1440px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.page-wrapper {
+  position: relative;
+}
+
+.site-header {
+  padding-top: 40px;
+}
+
 .banner {
   width: 150px;
-  height: 37.5px;
-  margin: 40px auto auto 20px;
+  height: 38px;
+  margin: 0 0 0 20px;
 }
 
 .top-nav {
-  margin: 30px 0 0;
+  margin-top: 30px;
   padding: 0 40px;
 }
 
@@ -198,25 +278,16 @@ th {
 
 .page-title {
   position: absolute;
-  top: 50px;
-  right: 22px;
-  color: #901c1c;
-  font-size: 0.875rem;
+  top: 47px;
+  right: 20px;
 }
 
 .section-photographers {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  column-gap: 247px;
-  row-gap: 30px;
-}
-
-.card {
-  flex-grow: 1;
-  flex-shrink: 0;
-  min-width: 263px;
+  --min: 310px;
+  grid-column-gap: 100px;
+  grid-row-gap: 30px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(var(--min), 1fr));
 }
 
 /* Pages */
