--- a/src/assets/sass/components/_helpers.scss
+++ b/src/assets/sass/components/_helpers.scss
@@ -1,11 +1,7 @@
 .show {
-  transform: scale(1);
-  transition: opacity 200ms, transform 200ms;
-  opacity: 1;
+  display: block;
 }
 
 .hide {
-  transform: scale(0);
-  transition: opacity 200ms, transform 200ms;
-  opacity: 0;
+  display: none;
 }
