--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@keyframes opacify {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 /* vendors */
 /* Base */
 /* Box sizing rules */
@@ -186,7 +194,7 @@ th {
 }
 
 .card {
-  animation: card-init 300ms ease-in-out forwards;
+  animation: opacify 300ms ease-in-out forwards;
   text-align: center;
 }
 
@@ -198,14 +206,6 @@ th {
   object-fit: cover;
 }
 
-@keyframes card-init {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 .tag-list {
   display: flex;
   flex-direction: row;
@@ -264,6 +264,7 @@ th {
 }
 
 .top-nav {
+  animation: opacify 300ms ease-in-out forwards;
   margin-top: 30px;
   padding: 0 40px;
 }
