--- a/src/assets/sass/components/_components.scss
+++ b/src/assets/sass/components/_components.scss
@@ -1,8 +1,9 @@
 /* Components */
+@import "helpers";
 @import "links";
 @import "buttons";
 @import "images";
 @import "tables";
 @import "cards";
 @import "tags";
-@import "helpers";
+@import "gallery";
