--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -6,10 +6,14 @@ $color-primary: #901c1c;
 $color-secondary: #db8876;
 
 $white: #fff;
-$color-100: #fafafa;
-$color-200: #e5e5e5;
-$color-300: #c4c4c4;
-$color-350: #737373;
-$color-400: #757575;
-$color-500: #525252;
+$color-grey-100: #fafafa;
+$color-grey-200: #e5e5e5;
+$color-grey-300: #c4c4c4;
+$color-grey-350: #737373;
+$color-grey-400: #757575;
+$color-grey-500: #525252;
 $black: #000;
+
+$small-screen: 48rem;
+$medium-screen: 62rem;
+$large-screen: 75rem;
