--- a/src/assets/sass/components/_tags.scss
+++ b/src/assets/sass/components/_tags.scss
@@ -5,13 +5,15 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
+  margin: 0;
+  padding: 0;
 }
 
 .tag-link,
 .tag {
   display: inline-block;
   padding: 3px 6px;
-  border: 1px solid $color-300;
+  border: 1px solid $color-grey-300;
   border-radius: 21px;
   background-color: transparent;
   color: $color-primary;
