--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,2 +1,547 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");@-webkit-keyframes opacify{0%{opacity:0}to{opacity:1}}@keyframes opacify{0%{opacity:0}to{opacity:1}}*,:after,:before{-webkit-box-sizing:border-box;box-sizing:border-box}html:focus-within{scroll-behavior:smooth}body,h1,h2,h3,h4,h5,h6,p{font-weight:400;margin:0}body{font-family:DM Sans,sans-serif;font-size:16px;line-height:1.5;min-height:100vh}ol[class],ul[class]{list-style:none}img,picture{display:block;height:auto;max-width:100%;-o-object-fit:cover;object-fit:cover}button,input,select,textarea{font:inherit}@media (prefers-reduced-motion:reduce){html:focus-within{scroll-behavior:auto}*,:after,:before{-webkit-animation-duration:.01ms!important;animation-duration:.01ms!important;-webkit-animation-iteration-count:1!important;animation-iteration-count:1!important;scroll-behavior:auto!important;-webkit-transition-duration:.01ms!important;-o-transition-duration:.01ms!important;transition-duration:.01ms!important}}.visually-hidden:not(:focus):not(:active){clip:rect(0,0,0,0);-webkit-clip-path:inset(50%);clip-path:inset(50%);height:1px;overflow:hidden;position:absolute;white-space:nowrap;width:1px}.page-title{color:#901c1c;font-size:.875rem}.show{display:block}.hide{display:none}.skip-link{left:50%;line-height:30px;position:absolute;-webkit-transform:translate(-50%,-100%);-ms-transform:translate(-50%,-100%);transform:translate(-50%,-100%);-webkit-transition:-webkit-transform .3s;transition:-webkit-transform .3s;-o-transition:transform .3s;transition:transform .3s;transition:transform .3s,-webkit-transform .3s}.skip-link:focus{-webkit-transform:translate(-50%);-ms-transform:translate(-50%);transform:translate(-50%)}.btn{background-color:#901c1c;border:0;border-radius:5px;color:#fff;font-size:1.125rem;font-weight:700;padding:.375rem 1.125rem}@media (min-width:48rem){.btn{padding:23px 18px}}.btn:focus,.btn:hover{background-color:#db8876;color:#000}.thumb-preview,.thumbnail{max-height:100px;-o-object-fit:cover;object-fit:cover}.thumb-preview{display:inline-block;max-width:100px}table{border-collapse:collapse;width:100%}tr:nth-of-type(odd){background:#eee}th{background:#bcb2e6;color:fff;font-weight:700}td,th{border:1px solid #ccc;padding:6px;text-align:left}.card{-webkit-animation:opacify .3s ease-in-out forwards;animation:opacify .3s ease-in-out forwards;text-align:center}.card-link{display:block;text-decoration:none}.card__name{font-size:2.25rem}.card__location,.card__name{color:#901c1c;font-weight:400}.card__location{font-size:.8125rem}.card__tagline{color:#000;font-size:.625rem;font-weight:400}.card__pricing{color:#757575;font-size:.5625rem;font-weight:400}.card__img{border-radius:12.5rem;height:12.5rem;margin:auto;-o-object-fit:cover;object-fit:cover;width:12.5rem}.card-cv{-webkit-box-align:center;-ms-flex-align:center;align-items:center;display:grid;grid-template-areas:"name button image" "location button image" "tagline button image" "taglist button image";grid-template-columns:auto 1fr auto;margin-top:1.875rem;position:relative;text-align:left;z-index:10}.card-cv .card__name{color:#db8876;grid-area:name;margin-right:1.0625rem}.card-cv .card__location{color:#901c1c;grid-area:location}.card-cv .card__tagline{color:#525252;font-size:.8125rem;grid-area:tagline}.card-cv .tag-list{-webkit-box-pack:start;-ms-flex-pack:start;grid-area:taglist;justify-content:flex-start}.card-cv .card__btn{bottom:30px;font-size:1.125rem;grid-area:button;left:50%;position:fixed;-webkit-transform:translateX(-50%);-ms-transform:translateX(-50%);transform:translateX(-50%)}.card-cv .card__img{border-radius:6.25rem;float:right;grid-area:image;height:6.25rem;margin:0 0 0 auto;width:6.25rem}@media (min-width:48rem){.card-cv .card__name{font-size:4rem;line-height:1}.card-cv .card__location{-ms-flex-item-align:start;align-self:start;font-size:1.5rem}.card-cv .card__tagline,.card-cv .tag-link{font-size:1.125rem}.card-cv .card__btn{-ms-flex-item-align:start;align-self:start;justify-self:start;position:static;-webkit-transform:translateX(0);-ms-transform:translateX(0);transform:translateX(0);white-space:nowrap}.card-cv .card__img{border-radius:12.5rem;height:12.5rem;width:12.5rem}}.tag-list{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-box-align:center;-ms-flex-align:center;-webkit-box-pack:center;-ms-flex-pack:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-direction:row;flex-direction:row;-ms-flex-wrap:wrap;flex-wrap:wrap;gap:5px;justify-content:center;margin:0;padding:0}.tag,.tag-link{background-color:transparent;border:1px solid #c4c4c4;border-radius:21px;color:#901c1c;display:inline-block;font-size:.75rem;line-height:1rem;padding:3px 6px;text-decoration:none}.tag-link:focus,.tag-link:hover{background-color:#901c1c;color:#fff}.media-gallery{-webkit-column-gap:1.25rem;-moz-column-gap:1.25rem;column-gap:1.25rem;display:grid;grid-template-columns:1fr}.media__content{position:relative}.media__figure{aspect-ratio:335/190;margin:0}@supports not (aspect-ratio:1/1){.media__figure{height:max(25vh,15rem)}}.media{border-radius:.3125rem;height:100%;width:100%}.media__caption{color:#901c1c;font-size:.875rem;padding:.625rem 0}.btn-like{display:block;margin:auto 0 0 auto}@media (min-width:48rem){.media-gallery{grid-template-columns:repeat(2,1fr)}}@media (min-width:62rem){.media-gallery{grid-template-columns:repeat(2,1fr)}.media__figure{aspect-ratio:350/300}}@media (min-width:75rem){.media-gallery{-webkit-column-gap:5.9375rem;-moz-column-gap:5.9375rem;column-gap:5.9375rem;grid-template-columns:repeat(3,1fr);row-gap:1.875rem}.media__figure{aspect-ratio:350/300}}.container{margin-left:auto;margin-right:auto;max-width:90rem}.page-wrapper{padding:0 1.25rem;position:relative}.site-header{padding:2.5rem 0 2.875rem}.link-home{display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex}.svg-banner{height:2.375rem;width:9.375rem}.top-nav{-webkit-animation:opacify .3s ease-in-out forwards;animation:opacify .3s ease-in-out forwards;margin-top:1.875rem;padding:0 2.5rem}.page-title{position:absolute;right:1.25rem;top:2.9375rem}.section-photographers{--min:19.375rem;grid-column-gap:6.25rem;grid-row-gap:1.875rem;display:grid;grid-template-columns:repeat(auto-fit,minmax(var(--min),auto))}.sort-nav{display:none;font-size:1.125rem;font-weight:700;margin-bottom:3.625rem;padding-right:1.5625rem;position:relative}@media (min-width:48rem){.sort-nav{display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex}}.sort-title{font-weight:700}.sort-list{background-color:#901c1c;border-radius:.3125rem;color:#fff;height:3.4375rem;left:100%;margin:0;overflow:hidden;padding:0 .625rem;position:absolute;top:-.875rem}.sort-list:after{border-left:3px solid #fff;border-top:3px solid #fff;content:"";display:block;height:.875rem;position:absolute;right:.875rem;top:1.3125rem;-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);-webkit-transform-origin:center;-ms-transform-origin:center;transform-origin:center;width:.875rem}.sort-item{padding:.875rem 2.625rem .875rem 0}.sort-item:first-child{border-bottom:1px solid #fff}.sort-item:last-child{border-top:1px solid #fff}
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
+@keyframes opacify {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/* vendors */
+/* Base */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-weight: normal;
+  margin: 0;
+}
+
+/* Set core body defaults */
+body {
+  font-family: "DM Sans", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  min-height: 100vh;
+}
+
+/* Remove list styles on ul, ol elements with a class attribute */
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations and transitions for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+
+  *,
+*::before,
+*::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    scroll-behavior: auto !important;
+    transition-duration: 0.01ms !important;
+  }
+}
+/* Accessibility */
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  white-space: nowrap;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  clip-path: inset(50%);
+}
+
+/* Typography */
+.page-title {
+  color: #901c1c;
+  font-size: 0.875rem;
+}
+
+/* Components */
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
+}
+
+/* Links */
+.skip-link {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  transition: transform 0.3s;
+  line-height: 30px;
+}
+
+.skip-link:focus {
+  transform: translate(-50%, 0);
+}
+
+/* Buttons */
+.btn {
+  padding: 0.375rem 1.125rem;
+  border: 0;
+  border-radius: 5px;
+  background-color: #901c1c;
+  color: #fff;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+@media (min-width: 48rem) {
+  .btn {
+    padding: 23px 18px;
+  }
+}
+.btn:hover, .btn:focus {
+  background-color: #db8876;
+  color: #000;
+}
+
+.btn-like,
+.btn-like::after {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.btn-like {
+  display: grid;
+  position: relative;
+  border: 0;
+  background: transparent;
+  overflow: hidden;
+}
+.btn-like::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #fff;
+  background-image: url("/assets/images/heart-red.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+}
+
+/* Images */
+.thumbnail {
+  max-height: 100px;
+  object-fit: cover;
+}
+
+.thumb-preview {
+  display: inline-block;
+  max-width: 100px;
+  max-height: 100px;
+  object-fit: cover;
+}
+
+/* Tables */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+tr:nth-of-type(odd) {
+  background: #eee;
+}
+
+th {
+  background: #bcb2e6;
+  color: fff;
+  font-weight: bold;
+}
+
+td,
+th {
+  padding: 6px;
+  border: 1px solid #ccc;
+  text-align: left;
+}
+
+.card {
+  animation: opacify 300ms ease-in-out forwards;
+  text-align: center;
+}
+
+.card-link {
+  display: block;
+  text-decoration: none;
+}
+
+.card__name {
+  color: #901c1c;
+  font-size: 2.25rem;
+  font-weight: normal;
+  line-height: 1;
+}
+
+.card__location {
+  color: #901c1c;
+  font-size: 0.8125rem;
+  font-weight: normal;
+}
+
+.card__tagline {
+  color: #000;
+  font-size: 0.625rem;
+  font-weight: normal;
+}
+
+.card__pricing {
+  color: #757575;
+  font-size: 0.5625rem;
+  font-weight: normal;
+}
+
+.card__img {
+  width: 12.5rem;
+  height: 12.5rem;
+  margin: auto;
+  border-radius: 12.5rem;
+  object-fit: cover;
+}
+
+.card-single {
+  display: grid;
+  position: relative;
+  align-items: center;
+  margin-top: 1.875rem;
+  grid-template-columns: auto 1fr auto;
+  text-align: left;
+  z-index: 10;
+  grid-template-areas: "name button image" "location location image" "tagline tagline image" "taglist taglist image";
+}
+.card-single .card__name {
+  margin-right: 1.0625rem;
+  color: #db8876;
+  grid-area: name;
+}
+.card-single .card__location {
+  color: #901c1c;
+  grid-area: location;
+}
+.card-single .card__tagline {
+  color: #525252;
+  font-size: 0.8125rem;
+  grid-area: tagline;
+}
+.card-single .tag-list {
+  justify-content: flex-start;
+  grid-area: taglist;
+}
+.card-single .card__btn {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 1.125rem;
+  grid-area: button;
+}
+.card-single .card__img {
+  width: 6.25rem;
+  height: 6.25rem;
+  margin: 0 0 0 auto;
+  float: right;
+  border-radius: 6.25rem;
+  grid-area: image;
+}
+.card-single .card__footer {
+  display: none;
+}
+@media (min-width: 48rem) {
+  .card-single .card__name {
+    font-size: 4rem;
+    line-height: 1;
+  }
+  .card-single .card__location {
+    align-self: start;
+    font-size: 1.5rem;
+  }
+  .card-single .card__tagline {
+    font-size: 1.125rem;
+  }
+  .card-single .tag-link {
+    font-size: 1.125rem;
+  }
+  .card-single .card__btn {
+    position: static;
+    align-self: start;
+    padding: 1.3125rem 0.6875rem;
+    transform: translateX(0);
+    font-size: 1.25rem;
+    white-space: nowrap;
+    justify-self: start;
+  }
+  .card-single .card__img {
+    width: 12.5rem;
+    height: 12.5rem;
+    border-radius: 12.5rem;
+  }
+  .card-single .card__footer {
+    display: block;
+    position: fixed;
+    right: 2.25rem;
+    bottom: 0;
+    padding: 1.25rem 1.875rem;
+    border-radius: 5px 5px 0 0;
+    background-color: #db8876;
+  }
+  .card-single .card__likes {
+    margin-right: 4.125rem;
+    padding-right: 1.5rem;
+    background-image: url("/assets/images/heart-black.svg");
+    background-repeat: no-repeat;
+    background-position: right center;
+  }
+  .card-single .card__likes,
+.card-single .card__pricing {
+    color: #000;
+    font-size: 1.5rem;
+  }
+}
+
+.tag-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  margin: 0;
+  padding: 0;
+}
+
+.tag-link,
+.tag {
+  display: inline-block;
+  padding: 3px 6px;
+  border: 1px solid #c4c4c4;
+  border-radius: 21px;
+  background-color: transparent;
+  color: #901c1c;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  text-decoration: none;
+}
+
+.tag-link:hover,
+.tag-link:focus {
+  background-color: #901c1c;
+  color: #fff;
+}
+
+.media-gallery {
+  display: grid;
+  column-gap: 1.25rem;
+  grid-template-columns: 1fr;
+}
+
+.media__content {
+  display: grid;
+  grid-template-areas: "grid";
+}
+
+.media__figure {
+  grid-area: grid;
+  margin: 0;
+  aspect-ratio: 335/190;
+}
+@supports not (aspect-ratio: 1/1) {
+  .media__figure {
+    height: max(25vh, 15rem);
+  }
+}
+
+.media {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border-radius: 0.3125rem;
+  object-fit: cover;
+}
+
+.media__caption {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.625rem 1.5rem 0.625rem 0;
+  color: #901c1c;
+  font-size: 0.875rem;
+}
+
+.btn-like {
+  grid-area: grid;
+  display: block;
+  margin: auto 0 0.625rem auto;
+}
+
+@media (min-width: 48rem) {
+  .media-gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 62rem) {
+  .media-gallery {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .media__figure {
+    aspect-ratio: 350/300;
+  }
+}
+@media (min-width: 75rem) {
+  .media-gallery {
+    column-gap: 5.9375rem;
+    row-gap: 1.875rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .media__figure {
+    aspect-ratio: 350/300;
+  }
+}
+/* Layouts */
+.container {
+  max-width: 90rem;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.page-wrapper {
+  position: relative;
+  padding: 0 1.25rem;
+}
+
+.site-header {
+  padding: 2.5rem 0 2.875rem;
+}
+
+.link-home {
+  display: inline-flex;
+}
+
+.svg-banner {
+  width: 9.375rem;
+  height: 2.375rem;
+}
+
+.top-nav {
+  animation: opacify 300ms ease-in-out forwards;
+  margin-top: 1.875rem;
+  padding: 0 2.5rem;
+}
+
+.page-title {
+  position: absolute;
+  top: 2.9375rem;
+  right: 1.25rem;
+}
+
+.section-photographers {
+  --min: 19.375rem;
+  grid-column-gap: 6.25rem;
+  grid-row-gap: 1.875rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(var(--min), auto));
+}
+
+.sort-nav {
+  display: none;
+  position: relative;
+  margin-bottom: 3.625rem;
+  padding-right: 1.5625rem;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+@media (min-width: 48rem) {
+  .sort-nav {
+    display: inline-flex;
+  }
+}
+
+.sort-title {
+  font-weight: bold;
+}
+
+.sort-list {
+  position: absolute;
+  top: -0.875rem;
+  left: 100%;
+  height: 3.4375rem;
+  margin: 0;
+  padding: 0 0.625rem;
+  border-radius: 0.3125rem;
+  background-color: #901c1c;
+  color: #fff;
+  overflow: hidden;
+}
+.sort-list::after {
+  display: block;
+  position: absolute;
+  top: 1.3125rem;
+  right: 0.875rem;
+  width: 0.875rem;
+  height: 0.875rem;
+  transform: rotate(45deg);
+  transform-origin: center;
+  border-top: 3px solid #fff;
+  border-left: 3px solid #fff;
+  content: "";
+}
+
+.sort-item {
+  padding: 0.875rem 2.625rem 0.875rem 0;
+}
+
+.sort-item:first-child {
+  border-bottom: 1px solid #fff;
+}
+
+.sort-item:last-child {
+  border-top: 1px solid #fff;
+}
+
+/* Pages */
+/* Themes */
+
 /*# sourceMappingURL=style.css.map */
