--- a/src/assets/sass/components/_gallery.scss
+++ b/src/assets/sass/components/_gallery.scss
@@ -9,8 +9,12 @@
   grid-template-areas: "grid";
 }
 
-.media__figure {
+.media__link {
   grid-area: grid;
+  text-decoration: none;
+}
+
+.media__figure {
   margin: 0;
   aspect-ratio: 335/190;
 
