--- a/src/assets/sass/components/_cards.scss
+++ b/src/assets/sass/components/_cards.scss
@@ -142,11 +142,17 @@
     }
 
     .card__likes {
+      position: relative;
       margin-right: 4.125rem;
       padding-right: 1.5rem;
-      background-image: url("/assets/images/heart-black.svg");
-      background-repeat: no-repeat;
-      background-position: right center;
+      &::after {
+        position: absolute;
+        right: 0;
+        color: $black;
+        font-size: 2.125rem;
+        line-height: 2.25rem;
+        content: "\2665";
+      }
     }
 
     .card__likes,
